--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <link rel="stylesheet" href="/src/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/main.ts" defer></script>
-  </head>
 
   <body>
     
     <game id="game">
       <menu id="menu" style="position: absolute; width: 100%; height: 100%; margin: 0; padding: 0;">
       </menu>
-      <game></game>
+      <gameplay id="gameplay"></gameplay>
     </game>
 
   </body>
